add postcss config

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>test</title>
 </head>
 <body>
-  TEST
+  <div class="outer">
+    TEST
+    <div class="inner">
+      TEST INNER
+    </div>
+  </div>
+
   <div id="app"></div>
 </body>
 </html>
